err/ipf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ipf'...
Compiling './lib/python3.5/site-packages/ipf/daemon.py'...
***   File "./lib/python3.5/site-packages/ipf/daemon.py", line 101
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ipf/etc'...
Listing './lib/python3.5/site-packages/ipf/etc/ipf'...
Listing './lib/python3.5/site-packages/ipf/etc/ipf/workflow'...
Listing './lib/python3.5/site-packages/ipf/etc/ipf/workflow/xsede'...
Listing './lib/python3.5/site-packages/ipf/etc/ipf/workflow/xsede/glue2'...
Listing './lib/python3.5/site-packages/ipf/glue2'...
Compiling './lib/python3.5/site-packages/ipf/glue2/cobalt.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cobalt.py, line 115)
Compiling './lib/python3.5/site-packages/ipf/glue2/condor.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (condor.py, line 105)
Compiling './lib/python3.5/site-packages/ipf/glue2/loadleveler.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (loadleveler.py, line 118)
Compiling './lib/python3.5/site-packages/ipf/glue2/nimbus.py'...
***   File "./lib/python3.5/site-packages/ipf/glue2/nimbus.py", line 178
    except StepError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipf/glue2/openstack.py'...
***   File "./lib/python3.5/site-packages/ipf/glue2/openstack.py", line 334
    except novaclient.exceptions.NotFound, e:
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipf/glue2/pbs.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pbs.py, line 625)
Compiling './lib/python3.5/site-packages/ipf/glue2/pbs_psc.py'...
***   File "./lib/python3.5/site-packages/ipf/glue2/pbs_psc.py", line 47
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipf/log.py'...
***   File "./lib/python3.5/site-packages/ipf/log.py", line 256
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ipf/publish.py'...
***   File "./lib/python3.5/site-packages/ipf/publish.py", line 49
    os.chmod(self._getPath()+".new",0644)  # may want other users to be able to read it
                                       ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/ipf/teragrid'...
Compiling './lib/python3.5/site-packages/ipf/teragrid/xmlhelper.py'...
***   File "./lib/python3.5/site-packages/ipf/teragrid/xmlhelper.py", line 101
    print "durations greater than a year are not supported, ignoring"
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ipf/var'...
Listing './lib/python3.5/site-packages/ipf/var/ipf'...
Listing './lib/python3.5/site-packages/ipf/var/log'...
Listing './lib/python3.5/site-packages/ipf/var/log/ipf'...
Compiling './lib/python3.5/site-packages/ipf/workflow.py'...
***   File "./lib/python3.5/site-packages/ipf/workflow.py", line 48
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ipf-1.0a8.egg-info'...
Listing './lib/python3.5/site-packages/mtk'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1'...
Compiling './lib/python3.5/site-packages/mtk/amqp_0_9_1/channel.py'...
***   File "./lib/python3.5/site-packages/mtk/amqp_0_9_1/channel.py", line 424
    except MtkError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mtk/amqp_0_9_1/connection.py'...
***   File "./lib/python3.5/site-packages/mtk/amqp_0_9_1/connection.py", line 338
    except MtkError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Basic'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Channel'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Connection'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Exchange'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Queue'...
Listing './lib/python3.5/site-packages/mtk/amqp_0_9_1/gen/Tx'...
Listing './lib/python3.5/site-packages/mtk/examples'...
Listing './lib/python3.5/site-packages/mtk/examples/amqp_0_9_1'...
Listing './lib/python3.5/site-packages/mtk-1.0b1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
